--- a/index.html
+++ b/index.html
@@ -327,7 +327,11 @@
                   
                   <h1 className="text-5xl md:text-8xl font-bold tracking-tight text-white mb-6 leading-tight">
                     Akhil S Lal <br />
-                    <span className="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-blue-500 to-violet-500">
+                    {/* Explicitly styling background-clip for compatibility */}
+                    <span 
+                        className="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-blue-500 to-violet-500"
+                        style={{ WebkitBackgroundClip: 'text', backgroundClip: 'text' }}
+                    >
                       Data Scientist
                     </span>
                   </h1>
