--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                       
                       <a href="tel:+919686612660" className="flex items-center px-6 py-4 bg-slate-800 hover:bg-green-900/30 border border-slate-700 hover:border-green-500 rounded-xl transition-all group">
                         <Phone className="text-green-400 mr-3 group-hover:scale-110 transition-transform" />
-                        <span className="text-slate-200">+91 9686612660</span>
+                        <span className="text-slate-200">+971562379767</span>
                       </a>
 
                       <a href="https://www.linkedin.com/in/akhil-s-lal-713138217" target="_blank" rel="noreferrer" className="flex items-center px-6 py-4 bg-slate-800 hover:bg-blue-900/30 border border-slate-700 hover:border-blue-500 rounded-xl transition-all group">
@@ -732,3 +732,4 @@
     </script>
 </body>
 </html>
+
