Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                         <span className="text-slate-200">akhilslal007@gmail.com</span>
                       </a>
                       
-                      <a href="tel:+919686612660" className="flex items-center px-6 py-4 bg-slate-800 hover:bg-green-900/30 border border-slate-700 hover:border-green-500 rounded-xl transition-all group">
+                      <a href="tel:+971562379767className="flex items-center px-6 py-4 bg-slate-800 hover:bg-green-900/30 border border-slate-700 hover:border-green-500 rounded-xl transition-all group">
                         <Phone className="text-green-400 mr-3 group-hover:scale-110 transition-transform" />
                         <span className="text-slate-200">+971562379767</span>
                       </a>
@@ -732,4 +732,5 @@
     </script>
 </body>
 </html>
+
 
